@@ -24,4 +24,4 @@ Note: Windows users need [Rtools](http://www.murdoch-sutherland.com/Rtools/) and
 For an intoductory video [click here](http://youtu.be/kws1PX1Dw9w)       
 For quick start slides [click here](http://trinker.github.com/reports/slides/reports.html)   
 For the package pdf help manual [click here](https://dl.dropbox.com/u/61803503/reports.pdf)
-
+For example demos [click here](http://trinker.github.com/reports/examples/)
