@@ -1,0 +1,10 @@
+knitcitations
+bibtex
+knitr
+stats
+graphics
+grDevices
+utils
+datasets
+methods
+base
