@@ -1,0 +1,22 @@
+## Title
+## <font size="20" >Name</font>
+## Date
+
+
+------
+## Page 1
+
+McVee _et. al._ (2005)    
+
+------
+## Page 2
+       
+
+------
+## References
+<p>McVee MB, Dunsmore K and Gavelek JR (2005).
+&ldquo;Schema Theory Revisited.&rdquo;
+<EM>Review of Educational Research</EM>, <B>75</B>(4), pp. 531-566.
+<a href="http://dx.doi.org/10.3102/00346543075004531">http://dx.doi.org/10.3102/00346543075004531</a>.
+
+
