@@ -1,49 +1,71 @@
-% Title
-%[[[[Tyler Rinker](https://github.com/trinker)]]]=small
-% Date
+% Example
+% [[[[Tyler Rinker](https://github.com/trinker)]]]=small
+% 3-13-13
 
 ```{r setup, include=FALSE}
 # set global chunk options
-opts_chunk$set(cache=TRUE)
+opts_chunk$set(cache=TRUE, warning = FALSE)
 library(knitr); library(knitcitations)
 ```
 
 # Slide 1
-this is cool    
+Remember many HTML tags are valid   
+So using:  
+<br />  
+[[[`<font size="20" color="blue" >big blue</font>` font]]]=small
+
+- produces... [[[]]]=frag-roll-in
+- Some <font size="20" color="blue" >big blue</font> font [[[]]]=frag-roll-in
+
 [[[this it a note]]]=notes
 
 # Slide 2
-To run this video use:
+To run these without a warning use:
 ```{r eval=FALSE}
 reveal.js(ref.page=NULL)
 ```
+Highlight code chunks via knitr.
+
+[[[this it a 2 note]]]=notes
 
 # 
-[[[cokNUTGtoM4]]]=yt
+[[[kws1PX1Dw9w]]]=yt
 
-# Slide C
-```{r, message=FALSE,echo=FALSE, fig.width=4, fig.height=4, fig.cap=""}
+# Slide 4
+```{r,  message=FALSE, echo=FALSE, fig.width=4, fig.height=4, fig.cap=""}
 library(ggplot2)
 qplot(speed, dist, data = cars) + geom_smooth()
 ```
 
 [[[]]]=sud
-# Slide A [[[]]]=bg-soothe
+# Slide 5a 
 
-# Slide B
+Going down?    
+![](https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png)
+
+[[[this it a 3 note]]]=notes 
+
+# Slide 5b
 > He was a very important man who was evidently the best situation that he could 
 > possible attend to but that's this slide anyway!
 
-# Slide C   
+# Slide 5c [[[]]]=bg-soothe
+Change background colors 
 
-- rvgvrrg    
-- dvfvgvgfv    
-- dfv    
-- very
-- d [[[]]]=frag-highlight-green 
+# Slide 5d  
+  
+- point 1    
+- point 2    
+- point 3  
+- point 4 [[[]]]=frag-rollin  
+- not a point [[[]]]=frag-highlight-green 
+- just colorful [[[]]]=frag-highlight-blue
+- huh? [[[]]]=frag-highlight-red      
 
+[[[this it a 2 note]]]=notes
 
 [[[]]]=eud
 
 # Last slide
-For more see: [reveal.js](http://lab.hakim.se/reveal-js/#/)
+For more see: [reveal.js](http://lab.hakim.se/reveal-js/#/)    
+Created with [reports](https://github.com/trinker/reports) package
