@@ -60,6 +60,12 @@
   within the html output.  When using embedded youtube,
   slide titles and text are ignored but may effect the
   spacing of the player. User additions are welcomed.
+
+  reports based code chunks are for convenience.  For more
+  control many HTML tags work with Rmarkdown.  The output
+  code can also be manipulated for finer control.
+  \code{html5} demos can be found at
+  \url{http://trinker.github.com/reports/examples/}.
 }
 \examples{
 \dontrun{
