@@ -14,6 +14,8 @@ NEW FEATURES
 
 MINOR FEATURES
 
+* `html5` and `reveal.js` out put now has a space between sections (slides)
+
 
 IMPROVEMENTS
 
